# ros2_ichiro_task

./: README.md  tempCodeRunnerFile  tempCodeRunnerFile.cpp
install/: local_setup.sh  setup.sh
install/cpp_parameters/lib/cpp_parameters/: minimal_param_node  my_node
install/cpp_parameters/share/ament_index/resource_index/parent_prefix_path/: cpp_parameters
install/cpp_parameters/share/cpp_parameters/: package.sh  package.xml
install/my_interfaces/include/my_interfaces/my_interfaces/msg/: boolean.h  double.h  object.hpp  objects.hpp  pose.hpp  velocity.h
install/my_interfaces/include/my_interfaces/my_interfaces/msg/detail/: boolean__builder.hpp  boolean__functions.h  boolean__rosidl_typesupport_introspection_c.h  boolean__rosidl_typesupport_introspection_cpp.hpp  boolean__traits.hpp  boolean__type_support.c  double__builder.hpp  double__functions.h  double__rosidl_typesupport_fastrtps_c.h  double__rosidl_typesupport_introspection_c.h  double__struct.h  double__struct.hpp  double__traits.hpp  double__type_support.c  double__type_support.cpp  double__type_support.h  my_soccer__builder.hpp  my_soccer__description.c  my_soccer__functions.h  my_soccer__rosidl_typesupport_fastrtps_c.h  my_soccer__rosidl_typesupport_fastrtps_cpp.hpp  my_soccer__struct.hpp  my_soccer__traits.hpp  my_soccer__type_support.c  my_soccer__type_support.cpp  object__description.c  object__functions.c  object__functions.h  object__rosidl_typesupport_fastrtps_c.h  object__rosidl_typesupport_introspection_c.h  object__struct.h  object__struct.hpp  object__type_support.c  object__type_support.cpp  objects__builder.hpp  objects__description.c  objects__functions.c  (+23 more)
install/my_interfaces/share/ament_index/resource_index/parent_prefix_path/: my_interfaces
install/my_interfaces/share/ament_index/resource_index/rosidl_interfaces/: my_interfaces
install/my_interfaces/share/my_interfaces/: package.sh  package.xml
install/my_interfaces/share/my_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  my_interfaces__rosidl_typesupport_cppExport.cmake  rosidl_cmake-extras.cmake
install/my_interfaces/share/my_interfaces/msg/: Boolean.json  Double.idl  Double.json  MySoccer.idl  Object.idl  Object.json  Objects.idl  Objects.json  Pose.json  VectorObjects.json  Velocity.idl
install/my_package/include/my_package/: MyRobotDriver.hpp  ObstacleAvoider.hpp
install/my_package/lib/my_package/: obstacle_avoider
install/my_package/share/ament_index/resource_index/package_run_dependencies/: my_package
install/my_package/share/my_package/: package.dsv  package.ps1  package.sh
install/my_package/share/my_package/launch/: robot_launch.py
install/odd_num_pubsub/lib/odd_num_pubsub/: listener  talker
install/odd_num_pubsub/share/odd_num_pubsub/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_controller/lib/robot_controller/: robot_controller
install/robot_controller/share/ament_index/resource_index/package_run_dependencies/: robot_controller
install/robot_controller/share/robot_controller/: package.sh  package.xml
install/robot_localization/include/robot_localization/: MonteCarloLocalization.hpp  MyRobotDriver.hpp  ObjectRecognizer.hpp  Odometry.hpp  RobotLocalization.hpp
install/robot_localization/lib/robot_localization/: inertial_unit  object_recognizer  robot_controller
install/robot_localization/share/ament_index/resource_index/package_run_dependencies/: robot_localization
install/robot_localization/share/robot_localization/: local_setup.sh  my_robot_driver.xml  package.sh  package.xml
install/robot_localization/share/robot_localization/cmake/: robot_localizationConfig.cmake
install/robot_localization/share/robot_localization/launch/: robot_launch.py
install/robot_localization/share/robot_localization/protos/: RobotstadiumSoccerField.proto
install/robot_localization/share/robot_localization/resource/: my_robot.urdf
install/robot_localization/share/robot_localization/worlds/: .soccer_field.wbproj  soccer_field.wbt
install/soccer_pubsub/lib/soccer_pubsub/: pose_listener  pose_talker  velocity_listener  velocity_talker
install/soccer_pubsub/share/ament_index/resource_index/package_run_dependencies/: soccer_pubsub
install/soccer_pubsub/share/ament_index/resource_index/parent_prefix_path/: soccer_pubsub
install/soccer_pubsub/share/soccer_pubsub/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/soccer_pubsub/share/soccer_pubsub/cmake/: soccer_pubsubConfig.cmake
install/sum_two_num_srvcli/lib/sum_two_num_srvcli/: client  server
install/sum_two_num_srvcli/share/sum_two_num_srvcli/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/cpp_parameters/: CMakeLists.txt
src/cpp_parameters/launch/: launch.py
src/cpp_parameters/src/: my_node.cpp
src/my_interfaces/: CMakeLists.txt  package.xml
src/my_package/: CMakeLists.txt  my_robot_driver.xml  package.xml
src/my_package/resource/: my_robot.urdf
src/my_package/src/: MyRobotDriver.cpp  ObstacleAvoider.cpp
src/odd_num_pubsub/: CMakeLists.txt  package.xml
src/odd_num_pubsub/src/: odd_num_publisher.cpp  odd_num_subscriber.cpp
src/robot_controller/: CMakeLists.txt
src/robot_controller/src/: RobotController.cpp
src/robot_localization/: CMakeLists.txt
src/robot_localization/include/robot_localization/: InertialUnit.hpp  ObjectRecognizer.hpp  Odometry.hpp  RobotLocalization.hpp
src/robot_localization/launch/: robot_launch.py
src/robot_localization/resource/: my_robot.urdf
src/robot_localization/src/: InertialUnit.cpp  MyRobotDriver.cpp  ObjectRecognizer.cpp  Odometry.cpp  RobotController.cpp  RobotLocalization.cpp
src/robot_localization/worlds/: .soccer_field.wbproj  soccer_field.wbt
src/soccer_pubsub/: CMakeLists.txt  package.xml
src/soccer_pubsub/src/: pose_publisher.cpp  pose_subscriber.cpp  velocity_publisher.cpp  velocity_subscriber.cpp
src/sum_two_num_srvcli/: CMakeLists.txt
src/sum_two_num_srvcli/src/: sum_two_num_client.cpp  sum_two_num_server.cpp
